--- a/Statecraft.App/Resources/layout/Game.axml
+++ b/Statecraft.App/Resources/layout/Game.axml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <TextView
-        android:text="Game ID: "
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+    <HorizontalScrollView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
+        android:id="@+id/horizontalScrollView1">
+        <ImageView
+            android:src="@drawable/map"
+            android:layout_width="1072px"
+            android:layout_height="match_parent"
+            android:id="@+id/map" />
+    </HorizontalScrollView>
 </LinearLayout>
