--- a/WebApp/src/app/app.component.html
+++ b/WebApp/src/app/app.component.html
@@ -1,3 +1,17 @@
 <h1>
   {{title}}
 </h1>
+<div>
+<nav class='navbar navbar-default'>
+    <div class='container-fluid'>
+        <a class='navbar-brand'>{{title}}</a>
+        <ul class='nav navbar-nav'>
+            <!--<li><a [routerLink]="['/welcome']">Home</a></li>-->
+            <li><a [routerLink]="['/mygames']">My Games</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+</div>
