add game sublist component

--- a/WebApp/src/game/game-list.component.html
+++ b/WebApp/src/game/game-list.component.html
@@ -16,38 +16,6 @@
             </div>
         </div>-->
         <h2>Games for Player with ID = {{playerId}}</h2>
-        <h3>Finished Games</h3>
-        <div class="table-responsive">
-            <table class="table" *ngIf="games && games.Games && games.Games.length">
-                <thead>
-                    <tr>
-                        <th>GameId</th>
-                        <th>Started</th>
-                        <th>Finished</th>
-                        <th>Country</th>
-                        <th>Round</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let game of games.Games | finishedGames">
-                        <a href="">
-                            <td>{{game.Id}}</td>
-                        </a>
-                        <td>{{(game.HasBegun ? 'yes' : 'no')}}</td>
-                        <td>{{(game.IsFinished ? 'yes' : 'no')}}</td>
-                        <td>
-                            <span *ngIf="game.FrancePlayerId && playerId == game.FrancePlayerId">France</span>
-                            <span *ngIf="game.GermanyPlayerId && playerId == game.GermanyPlayerId">Germany</span>
-                            <span *ngIf="game.AustriaPlayerId && playerId == game.AustriaPlayerId">Austria</span>
-                            <span *ngIf="game.RussiaPlayerId && playerId == game.RussiaPlayerId">Austria</span>
-                            <span *ngIf="game.EnglandPlayerId && playerId == game.EnglandPlayerId">England</span>
-                            <span *ngIf="game.TurkeyPlayerId && playerId == game.TurkeyPlayerId">Turkey</span>
-                            <span *ngIf="game.ItalyPlayerId && playerId == game.ItalyPlayerId">Italy</span>
-                        </td>
-                        <td>{{game | gameRound}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <game-sublist [listName]="finishedListName" [gameResponse]="games"></game-sublist>
     </div>
 </div>
