--- a/WebApp/src/app/app.component.html
+++ b/WebApp/src/app/app.component.html
@@ -4,9 +4,9 @@
 <div>
 <nav class='navbar navbar-default'>
     <div class='container-fluid'>
-        <a class='navbar-brand'>{{title}}</a>
+        <!--<a class='navbar-brand'>{{title}}</a>-->
         <ul class='nav navbar-nav'>
-            <!--<li><a [routerLink]="['/welcome']">Home</a></li>-->
+            <li><a [routerLink]="['/']">Home</a></li>
             <li><a [routerLink]="['/mygames']">My Games</a></li>
         </ul>
     </div>
