--- a/WebApp/src/game/game-display.component.html
+++ b/WebApp/src/game/game-display.component.html
@@ -1,3 +1,3 @@
 <div>
-    <h2>{{game | gameCountry}} - {{game | gameRound}}</h2>
+    <h2>{{game | gameCountry:playerId}} - {{game | gameRound}}</h2>
 </div>
