--- a/WebApp/src/game/game-list.component.html
+++ b/WebApp/src/game/game-list.component.html
@@ -16,10 +16,10 @@
             </div>
         </div>-->
         <h2>Games for Player with ID = {{playerId}}</h2>
-        <game-sublist [listName]="pendingListName" [gameResponse]="games" [filterBy]="filterByPending"></game-sublist>
+        <game-sublist [listName]="pendingListName" [gameResponse]="games" [filterBy]="filterByPending" [playerId]="playerId"></game-sublist>
         <br/>
-        <game-sublist [listName]="startedListName" [gameResponse]="games" [filterBy]="filterByStarted"></game-sublist>
+        <game-sublist [listName]="startedListName" [gameResponse]="games" [filterBy]="filterByStarted" [playerId]="playerId"></game-sublist>
         <br/>
-        <game-sublist [listName]="finishedListName" [gameResponse]="games" [filterBy]="filterByFinished"></game-sublist>
+        <game-sublist [listName]="finishedListName" [gameResponse]="games" [filterBy]="filterByFinished" [playerId]="playerId"></game-sublist>
     </div>
 </div>
