--- a/WebApp/src/game/game-sublist.component.html
+++ b/WebApp/src/game/game-sublist.component.html
@@ -6,6 +6,7 @@
                 <th>GameId</th>
                 <th>Country</th>
                 <th>Round</th>
+                <th>Creator Id</th>
             </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
                     <span>{{game | gameCountry:playerId}}</span>
                 </td>
                 <td>{{game | gameRound}}</td>
+                <td>{{game.CreatorPlayerId}}</td>
             </tr>
         </tbody>
     </table>
