Add create player functionality

--- a/WebApp/src/app/app.component.html
+++ b/WebApp/src/app/app.component.html
@@ -2,6 +2,7 @@
   {{title}}
 </h1>
 <h2>{{player.Name}}</h2>
+<div><a [routerLink]="['/createplayer']">Create a new player</a></div>
 <div>
 <nav class='navbar navbar-default'>
     <div class='container-fluid'>
